# Chess

./: CMakeLists.txt  Play_Chess_Config.h.in  main.cpp
builds/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  Play_Chess.sln  Play_Chess.vcxproj  Play_Chess.vcxproj.filters  Play_Chess_Config.h  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
builds/Play_Chess.dir/Debug/: Play_Chess.exe.recipe  Play_Chess.ilk
builds/Play_Chess.dir/Debug/Play_Chess.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
builds/include/: cmake_install.cmake
builds/src/: Chess_API.vcxproj  Chess_API.vcxproj.filters  cmake_install.cmake
builds/src/Chess_API.dir/Debug/Chess_API.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Chess_API.lastbuildstate  Cl.items.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  (+1 more)
builds/src/Debug/: Chess_API.lib
builds/tests/: cmake_install.cmake  tests_lib.vcxproj  tests_lib.vcxproj.filters
builds/tests/Debug/: tests_lib.lib
builds/x64/Debug/ALL_BUILD/: ALL_BUILD.recipe
builds/x64/Debug/ZERO_CHECK/: ZERO_CHECK.recipe
include/: Chess.h
include/Chess/: Chess.h
src/: Board.h  CMakeLists.txt  Chess.cpp  Chess_API_vars.h  Computer_Player.cpp  Computer_Player.h  Game.cpp  Game.h  Human_Player.cpp  Human_Player.h  Player.h
tests/: CMakeLists.txt  Chess_test.cpp  Chess_test.h  Game_test.cpp  Game_test.h
(+17 files in other folders)
